# AdminCenterAPI

./: .env.sample  Cargo.toml  README.md
migrations/mysql/: 20240618153337_Create_user_table.sql
migrations/postgres/: 20240618153337_Create_user_table.sql
migrations/sqlite/: 20240618153337_Create_user_table.sql
src/: config.rs  main.rs  session_store.rs
