[package]
name = "administration_center_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["mysql", "postgres", "sqlite"] }
